adding all components to app to ensure they are all configured and load properly

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,16 @@
 <div class='container'>
 	<div class='row'>
 		<div class='col-md-12'>
-			<h3>I'm working!</h3>
+			<h2>Udemy Course Project</h2>
 		</div>
 	</div>
+	
+	<app-recipe></app-recipe>
+	<app-recipe-detail></app-recipe-detail>
+	<app-recipe-item></app-recipe-item>
+	<app-recipe-list></app-recipe-list>
+	
+	<app-shopping-list></app-shopping-list>
+	<app-shopping-list-editor></app-shopping-list-editor>
+	<app-ingredient></app-ingredient>
 </div>
