--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,13 +4,11 @@
 			<h2>Udemy Course Project</h2>
 		</div>
 	</div>
-	
-	<app-recipe></app-recipe>
-	<app-recipe-detail></app-recipe-detail>
-	<app-recipe-item></app-recipe-item>
-	<app-recipe-list></app-recipe-list>
+
+	<app-header></app-header>
+
+	<app-recipes></app-recipes>
 	
 	<app-shopping-list></app-shopping-list>
-	<app-shopping-list-editor></app-shopping-list-editor>
-	<app-ingredient></app-ingredient>
+
 </div>
