--- a/src/app/shopping/shopping-list/shopping-list.component.html
+++ b/src/app/shopping/shopping-list/shopping-list.component.html
@@ -1,5 +1,15 @@
 <div class='row'>
+	<h3>Shopping List</h3>
+</div>
+<div class='row'>
 	<div class='col-md-12'>
-		<h3>Shopping List</h3>
+		<app-shopping-list-editor></app-shopping-list-editor>
+
+		<hr/>
+		
+		<ol>
+			<li>list item...</li>
+			<li>list item...</li>
+		</ol>
 	</div>
 </div>
