starting on shopping-list w/ ingredient.model setup

--- a/src/app/shopping/shopping-list/shopping-list.component.html
+++ b/src/app/shopping/shopping-list/shopping-list.component.html
@@ -7,9 +7,8 @@
 
 		<hr/>
 		
-		<ol>
-			<li>list item...</li>
-			<li>list item...</li>
-		</ol>
+		<ul class='list-group'>
+			<a class='list-group-item' style='cursor: pointer'></a>
+		</ul>
 	</div>
 </div>
