--- a/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -1,5 +1,41 @@
 <div class='row'>
 	<div class='col-md-12'>
 		<h3>Recipe Details</h3>
+		
+		<img src='' alt='' class='img-responsive' />
+	</div>
+</div>
+
+<div class='row'>
+	<div class='col-md-12'>
+		<h4>Recipe Name</h4>
+	</div>
+</div>
+
+<div class='row'>
+	<div class='col-md-12'>
+		<div class='btn-group'>
+			<button type='button' class='btn btn-primary dropdown-toggle'>
+				Manage Recipe <span class='caret'></span>
+			</button>
+			
+			<ul class='dropdown-menu'>
+				<li><a href='#'>To Shopping List</a></li>
+				<li><a href='#'>Edit Recipe</a></li>
+				<li><a href='#'>Delete Recipe</a></li>
+			</ul>
+		</div>
+	</div>
+</div>
+
+<div class='row'>
+	<div class='col-md-12'>
+		<h4>Description</h4>
+	</div>
+</div>
+
+<div class='row'>
+	<div class='col-md-12'>
+		<h4>Ingredients</h4>
 	</div>
 </div>
