--- a/src/app/shopping/shopping-list/shopping-list.component.html
+++ b/src/app/shopping/shopping-list/shopping-list.component.html
@@ -8,7 +8,10 @@
 		<hr/>
 		
 		<ul class='list-group'>
-			<a class='list-group-item' style='cursor: pointer'></a>
+			<a class='list-group-item' style='cursor: pointer'
+			   *ngFor='let i of ingredients'>
+				{{ i.name }} ({{ i.amount }})
+			</a>
 		</ul>
 	</div>
 </div>
