--- a/src/app/recipe-book/recipe-item/recipe-item.component.html
+++ b/src/app/recipe-book/recipe-item/recipe-item.component.html
@@ -1,5 +1,12 @@
-<div class='row'>
-	<div class='col-md-12'>
-		<h3>Recipe Item</h3>
+<a href='#' class='list-group-item clearfix'>
+	<div class='pull-left'>
+		<h4 class='list-group-item-heading'>{{recipe.name}}</h4>
+		<p class='list-group-item-text'>{{recipe.description}}</p>
 	</div>
-</div>
+	<span class='pull-right'>
+		<img [src]='recipe.imagePath'
+			 alt='{{recipe.description}}' 
+			 class='img-responsive' 
+			 style='max-height: 50px' />
+	</span>
+</a>
