--- a/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -2,13 +2,7 @@
 	<div class='col-md-12'>
 		<h3>Recipe Details</h3>
 		
-		<img src='' alt='' class='img-responsive' />
-	</div>
-</div>
-
-<div class='row'>
-	<div class='col-md-12'>
-		<h4>Recipe Name</h4>
+		<img src="{{recipe.imagePath}}" alt='' class='img-responsive' />
 	</div>
 </div>
 
@@ -30,7 +24,13 @@
 
 <div class='row'>
 	<div class='col-md-12'>
-		<h4>Description</h4>
+		<h2>{{recipe.name}}</h2>
+	</div>
+</div>
+
+<div class='row'>
+	<div class='col-md-12'>
+		<p>{{recipe.description}}</p>
 	</div>
 </div>
 
