--- a/src/app/recipe-book/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-book/recipe-list/recipe-list.component.html
@@ -12,7 +12,10 @@
 <div class = 'row'>
 	<div class='col-xs-12'>
 
-		<app-recipe-item *ngFor="let r of recipes" [recipe]='r'>
+		<app-recipe-item 
+            *ngFor="let r of recipes"
+            [recipe]='r'
+            (click)="onRecipeClick(r)">
 		</app-recipe-item>
 
 	</div>
