added template for initial recipe selection

--- a/src/app/recipe-book/recipes/recipes.component.html
+++ b/src/app/recipe-book/recipes/recipes.component.html
@@ -7,6 +7,12 @@
              (recipeClicked)="recipeClicked($event)"></app-recipe-list>
 	</div>
 	<div class='col-lg-7 col-md-7 col-sm-7 col-xs-12'>
-		<app-recipe-detail [recipe]='currentRecipe'></app-recipe-detail>
+		<app-recipe-detail 
+			*ngIf="currentRecipe; else infoText"
+            [recipe]='currentRecipe'>
+		</app-recipe-detail>
+		<ng-template #infoText>
+			<h3>Please select a recipe!</h3>
+		</ng-template>
 	</div>
 </div>
