--- a/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -20,7 +20,9 @@
 <div class='row'>
 	<div class='col-md-12'>
 		<h2>{{recipe.name}}</h2>
-		<img src="{{recipe.imagePath}}" alt='' class='img-responsive' />
+		<img [src]="recipe.imagePath" alt="{{ recipe.name }}" 
+			 class='img-responsive'
+			 style='max-height:300px'/>
 	</div>
 </div>
 
