--- a/src/app/shopping/shopping-list/shopping-list.component.html
+++ b/src/app/shopping/shopping-list/shopping-list.component.html
@@ -3,7 +3,9 @@
 </div>
 <div class='row'>
 	<div class='col-md-12'>
-		<app-shopping-list-editor></app-shopping-list-editor>
+		<app-shopping-list-editor
+			(ingredientCreated)="onIngredientCreated($event)"
+		></app-shopping-list-editor>
 
 		<hr/>
 		
