--- a/src/app/recipe-book/recipes/recipes.component.html
+++ b/src/app/recipe-book/recipes/recipes.component.html
@@ -3,8 +3,7 @@
 </div>
 <div class='row'>
 	<div class='col-lg-5 col-md-5 col-sm-5 col-xs-12'>
-		<app-recipe-list
-             (recipeClicked)="recipeClicked($event)"></app-recipe-list>
+		<app-recipe-list></app-recipe-list>
 	</div>
 	<div class='col-lg-7 col-md-7 col-sm-7 col-xs-12'>
 		<app-recipe-detail 
