--- a/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -36,5 +36,10 @@
 <div class='row'>
 	<div class='col-md-12'>
 		<h4>Ingredients</h4>
+		<ul>
+			<li class='list-group-item' *ngFor="let i of recipe.ingredients">
+				{{ i.name }}, {{ i.amount }}
+			</li>
+		</ul>
 	</div>
 </div>
