--- a/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -9,7 +9,7 @@
 			</button>
 			
 			<ul class='dropdown-menu'>
-				<li><a href='#'>To Shopping List</a></li>
+				<li><a style='cursor: pointer'				(click)="onToShoppingList()">To Shopping List</a></li>
 				<li><a href='#'>Edit Recipe</a></li>
 				<li><a href='#'>Delete Recipe</a></li>
 			</ul>
