--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 		</div>
 	</div>
 
-	<app-header (navigationEvent)="onNavigationEvent($event)"></app-header>
+	<app-header></app-header>
 
 	<router-outlet></router-outlet>
 
