implementing param subscription for recipe-details

--- a/src/app/recipe-book/recipes/recipes.component.html
+++ b/src/app/recipe-book/recipes/recipes.component.html
@@ -6,12 +6,13 @@
 		<app-recipe-list></app-recipe-list>
 	</div>
 	<div class='col-lg-7 col-md-7 col-sm-7 col-xs-12'>
-		<app-recipe-detail 
+		<router-outlet></router-outlet>
+		<!--<app-recipe-detail 
 			*ngIf="currentRecipe; else infoText"
             [recipe]='currentRecipe'>
 		</app-recipe-detail>
 		<ng-template #infoText>
 			<h3>Please select a recipe!</h3>
-		</ng-template>
+		</ng-template>-->
 	</div>
 </div>
