--- a/src/app/recipe-book/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-book/recipe-list/recipe-list.component.html
@@ -14,8 +14,7 @@
 
 		<app-recipe-item 
             *ngFor="let r of recipes"
-            [recipe]='r'
-            (click)="onRecipeClick(r)">
+            [recipe]='r'>
 		</app-recipe-item>
 
 	</div>
