--- a/src/app/recipe-book/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-book/recipe-list/recipe-list.component.html
@@ -12,10 +12,11 @@
 <div class = 'row'>
 	<div class='col-xs-12'>
 
-		<app-recipe-item 
-            *ngFor="let r of recipes"
-            [recipe]='r'>
-		</app-recipe-item>
+		<a *ngFor="let r of recipes"
+			[routerLink]="['/recipes', r.id]"
+			class='list-group-item clearfix'>
+			<app-recipe-item [recipe]='r'></app-recipe-item>
+		</a>
 
 	</div>
 </div>
