--- a/src/app/recipe-book/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-book/recipe-list/recipe-list.component.html
@@ -1,7 +1,7 @@
 <div class='row'>
 	<div class='col-md-12'>
 		<h3>Recipe List</h3>
-		
+
 		<button class='btn btn-success'>New Recipe</button>
 
 	</div>
@@ -14,6 +14,7 @@
 
 		<a *ngFor="let r of recipes"
 			[routerLink]="['/recipes', r.id]"
+       routerLinkActive="active"
 			class='list-group-item clearfix'>
 			<app-recipe-item [recipe]='r'></app-recipe-item>
 		</a>
