--- a/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -7,11 +7,11 @@
 			<button type='button' class='btn btn-primary dropdown-toggle'>
 				Manage Recipe <span class='caret'></span>
 			</button>
-			
+
 			<ul class='dropdown-menu'>
 				<li><a style='cursor: pointer'
 					(click)="onToShoppingList()">To Shopping List</a></li>
-				<li><a href='#'>Edit Recipe</a></li>
+				<li><a [routerLink]="['edit']">Edit Recipe</a></li>
 				<li><a href='#'>Delete Recipe</a></li>
 			</ul>
 		</div>
@@ -22,7 +22,7 @@
 <div class='row'>
 	<div class='col-md-12'>
 		<h2>{{recipe.name}}</h2>
-		<img [src]="recipe.imagePath" alt="{{ recipe.name }}" 
+		<img [src]="recipe.imagePath" alt="{{ recipe.name }}"
 			 class='img-responsive'
 			 style='max-height:300px'/>
 	</div>
