--- a/src/app/recipe-book/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-book/recipe-list/recipe-list.component.html
@@ -2,7 +2,8 @@
 	<div class='col-md-12'>
 		<h3>Recipe List</h3>
 
-		<button class='btn btn-success'>New Recipe</button>
+		<button class='btn btn-success'
+      (click)="onNewRecipe()">New Recipe</button>
 
 	</div>
 </div>
