--- a/src/app/shopping/shopping-list-editor/shopping-list-editor.component.html
+++ b/src/app/shopping/shopping-list-editor/shopping-list-editor.component.html
@@ -1,38 +1,46 @@
 <div class='row'>
 	<div class='col-md-12'>
 		<h3>Shopping List Editor</h3>
-		<form>
+
+		<form #shoppingListForm="ngForm" (ngSubmit)="onSubmit()">
+
 			<div class='row'>
-				<div class='col-sm-5 form-group'>
+        <div class='col-sm-5 form-group'>
 					<label for='name'>Name</label>
-					<input
-						type='text'
+					<input type='text'
 						id='name'
+            name="name"
 						class='form-control'
-						#nameInput>
+						ngModel
+            required>
 				</div>
+
 				<div class='col-sm-2 form-group'>
 					<label for='amount'>Amount</label>
-					<input
-						type='number' 
-					    id='amount' 
-					    class='form-control'					   
-						   #amountInput>
+					<input type='number'
+            class='form-control'
+            id='amount'
+            name="amount"
+            ngModel
+            required>
 				</div>
 			</div>
+
 			<div class='row'>
 				<div class='col-xs-12'>
-					<button class='btn btn-success' 
-						type='button'
-						(click)="onAdd()">Add</button>
-					
+
+					<button class='btn btn-success'
+						type='submit'>Add</button>
+
 					<button class='btn btn-danger'
 						type='button'
 						(click)="onDelete()">Delete</button>
-					
+
 					<button class='btn btn-primary' type='button'>Clear</button>
 				</div>
 			</div>
+
 		</form>
+
 	</div>
 </div>
