implementing reset functionality

--- a/src/app/shopping/shopping-list-editor/shopping-list-editor.component.html
+++ b/src/app/shopping/shopping-list-editor/shopping-list-editor.component.html
@@ -36,7 +36,9 @@
 						type='button'
 						(click)="onDelete()">Delete</button>
 
-					<button class='btn btn-primary' type='button'>Clear</button>
+					<button type='button'
+            class='btn btn-primary'
+            (click)="onClear()">Clear</button>
 				</div>
 			</div>
 
