--- a/src/app/shopping/shopping-list-editor/shopping-list-editor.component.html
+++ b/src/app/shopping/shopping-list-editor/shopping-list-editor.component.html
@@ -2,6 +2,7 @@
 	<div class='col-md-12'>
 		<h3>Shopping List Editor</h3>
 
+    <!-- #name="ngForm" provides access to the javascript object created by angular -->
 		<form #shoppingListForm="ngForm" (ngSubmit)="onSubmit()">
 
 			<div class='row'>
