--- a/src/app/shopping/shopping-list-editor/shopping-list-editor.component.html
+++ b/src/app/shopping/shopping-list-editor/shopping-list-editor.component.html
@@ -24,7 +24,8 @@
             id='amount'
             name="amount"
             ngModel
-            required>
+            required
+            pattern="^[1-9]+[0-9]*$">
 				</div>
 			</div>
 
@@ -33,7 +34,7 @@
 
 					<button class='btn btn-success'
 						type='submit'
-            [disabled]="!gitshoppingListForm.valid">Add</button>
+            [disabled]="!shoppingListForm.valid">Add</button>
 
 					<button class='btn btn-danger'
 						type='button'
