--- a/src/app/shopping/shopping-list/shopping-list.component.html
+++ b/src/app/shopping/shopping-list/shopping-list.component.html
@@ -3,11 +3,12 @@
 		<app-shopping-list-editor></app-shopping-list-editor>
 
 		<hr/>
-		
+
 		<ul class='list-group'>
 			<a class='list-group-item' style='cursor: pointer'
-			   *ngFor='let i of ingredients'>
-				{{ i.name }} ({{ i.amount }})
+			   *ngFor='let ig of ingredients; let i = index'
+         (click)="onEditItem(i)">
+				{{ ig.name }} ({{ ig.amount }})
 			</a>
 		</ul>
 	</div>
