--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -1,10 +1,11 @@
 <div class="row">
   <h3>Edit Recipe</h3>
 </div>
+
 <div class="row">
   <div class="col-xs-12">
     <img
-        style="max-height:300px;"
+        class="img-responsive"
         [src]="currentRecipe.imagePath"
          alt="{{currentRecipe.name}}" />
   </div>
@@ -30,6 +31,9 @@
         placeholder="About this recipe...">
     </div>
 
-    <button class="btn btn-success" >Save</button>
+    <button type='submit'
+        class="btn btn-success">Save</button>
+    <button type="button"
+        class="btn btn-danger">Cancel</button>
   </div>
 </div>
