--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -3,9 +3,9 @@
 </div>
 
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-xs-12 form-group">
     <img
-        class="img-responsive"
+        class="img-responsive img-recipe-border"
         [src]="currentRecipe.imagePath"
          alt="{{currentRecipe.name}}" />
   </div>
@@ -13,6 +13,7 @@
 
 <div class="row">
   <div class="col-xs-12">
+
     <div class="form-group">
       <label for="recipeName">Name</label>
       <input id='recipeName' class="form-control" [(ngModel)]="currentRecipe.name"
@@ -35,5 +36,6 @@
         class="btn btn-success">Save</button>
     <button type="button"
         class="btn btn-danger">Cancel</button>
+
   </div>
 </div>
