--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -5,7 +5,7 @@
 <div class="row">
   <div class="col-xs-12 form-group">
     <img
-        class="img-responsive img-recipe-border"
+        class="img-responsive img-recipe-edit"
         [src]="currentRecipe.imagePath"
          alt="{{currentRecipe.name}}" />
   </div>
