--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -15,6 +15,7 @@
   <div class="col-xs-12">
 
     <form [formGroup]="recipeEditForm" (ngSubmit)="onSubmit()">
+
       <div class="form-group">
         <label for="recipeName">Name</label>
         <input type='text'
@@ -54,8 +55,10 @@
       <div class="form-group">
         <button type='submit'
             class="btn btn-success">Save</button>
+
         <button type="button"
-            class="btn btn-danger">Cancel</button>
+            class="btn btn-danger"
+            (click)="onCancel()">Cancel</button>
       </div>
 
     </form>
