disabling save button on invalid form

--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -54,6 +54,7 @@
 
       <div class="form-group">
         <button type='submit'
+            [disabled]="!recipeEditForm.valid"
             class="btn btn-success">Save</button>
 
         <button type="button"
