--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -42,14 +42,15 @@
 
       <div class="form-group">
         <label for="recipeDescription">Description</label>
-        <input type="text"
+        <textarea
+          rows="6"
           id="recipeDescription"
           name="recipeDescription"
           [ngModel]="currentRecipe.description"
           formControlName="recipeDescription"
           class="form-control"
           placeholder="About this recipe..."
-          required>
+          required></textarea>
       </div>
 
       <div class="form-group">
