--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -64,6 +64,25 @@
             (click)="onCancel()">Cancel</button>
       </div>
 
+      <div class="row">
+
+        <div class="col-xs-8">
+          <input type="text"
+              class="form-control">
+        </div>
+
+        <div class="col-xs-2">
+          <input type="number"
+              class="form-control">
+        </div>
+
+        <div class="col-xs-2">
+          <button type="button"
+                  class="btn btn-danger">X</button>
+        </div>
+
+      </div>
+
     </form>
 
   </div>
