--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -2,15 +2,15 @@
   <h3>{{ editMode ? 'Edit' : 'New' }} Recipe</h3>
 </div>
 
-<div class="row"
-  [class]="editMode ? 'image-path-visible' : ''">
-  <div class="col-xs-12 form-group">
-    <img
-        class="img-responsive img-recipe-edit"
-        [src]="currentRecipe.imagePath"
-         alt="{{currentRecipe.name}}" />
-  </div>
-</div>
+<!--<div class="row"-->
+  <!--[class]="editMode ? 'image-path-visible' : ''">-->
+  <!--<div class="col-xs-12 form-group">-->
+    <!--<img-->
+        <!--class="img-responsive img-recipe-edit"-->
+        <!--[src]="currentRecipe.imagePath"-->
+         <!--alt="{{currentRecipe.name}}" />-->
+  <!--</div>-->
+<!--</div>-->
 
 <div class="row">
   <div class="col-xs-12">
@@ -23,7 +23,6 @@
                id='recipeName'
                class="form-control"
                name="recipeName"
-               [ngModel]="currentRecipe.name"
                formControlName="recipeName"
                placeholder="Recipe name"
                required>
@@ -34,7 +33,6 @@
         <input type='text'
           id="imagePath"
           name="imagePath"
-          [ngModel]="currentRecipe.imagePath"
           formControlName="imagePath"
           class="form-control"
           placeholder="Image URL"
@@ -47,22 +45,13 @@
           rows="6"
           id="recipeDescription"
           name="recipeDescription"
-          [ngModel]="currentRecipe.description"
           formControlName="recipeDescription"
           class="form-control"
           placeholder="About this recipe..."
           required></textarea>
       </div>
 
-      <div class="form-group">
-        <button type='submit'
-            [disabled]="!recipeEditForm.valid"
-            class="btn btn-success">Save</button>
-
-        <button type="button"
-            class="btn btn-danger"
-            (click)="onCancel()">Cancel</button>
-      </div>
+      <h4>Ingredients</h4>
 
       <div class="row">
 
@@ -71,16 +60,26 @@
               class="form-control">
         </div>
 
-        <div class="col-xs-2">
+        <div class="col-xs-3">
           <input type="number"
               class="form-control">
         </div>
 
-        <div class="col-xs-2">
+        <div class="col-xs-1">
           <button type="button"
                   class="btn btn-danger">X</button>
         </div>
 
+      </div>
+
+      <div class="form-group">
+        <button type='submit'
+                [disabled]="!recipeEditForm.valid"
+                class="btn btn-success">Save</button>
+
+        <button type="button"
+                class="btn btn-danger"
+                (click)="onCancel()">Cancel</button>
       </div>
 
     </form>
