--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -53,23 +53,27 @@
 
       <h4>Ingredients</h4>
 
-      <div class="row">
+      <div class="row" formArrayName="ingredients" *ngFor="let ing of recipeEditForm.get('ingredients').controls; let i = index">
+        <div [formGroupName]="i">
 
-        <div class="col-xs-8">
-          <input type="text"
-              class="form-control">
+          <div class="col-xs-8 form-group">
+            <input type="text"
+                class="form-control"
+                formControlName="name">
+          </div>
+
+          <div class="col-xs-3 form-group">
+            <input type="number"
+                class="form-control"
+                formControlName="amount">
+          </div>
+
+          <div class="col-xs-1 form-group">
+            <button type="button"
+                    class="btn btn-danger">x</button>
+          </div>
+
         </div>
-
-        <div class="col-xs-3">
-          <input type="number"
-              class="form-control">
-        </div>
-
-        <div class="col-xs-1">
-          <button type="button"
-                  class="btn btn-danger">X</button>
-        </div>
-
       </div>
 
       <div class="form-group">
