--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -82,6 +82,10 @@
                 class="btn btn-success">Save</button>
 
         <button type="button"
+            class="btn btn-success"
+            (click)="onAddIngredient()">Add Ingredient</button>
+
+        <button type="button"
                 class="btn btn-danger"
                 (click)="onCancel()">Cancel</button>
       </div>
