--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -77,12 +77,14 @@
       </div>
 
       <div class="form-group">
+        <hr/>
+
         <button type='submit'
                 [disabled]="!recipeEditForm.valid"
                 class="btn btn-success">Save</button>
 
         <button type="button"
-            class="btn btn-success"
+            class="btn btn-default"
             (click)="onAddIngredient()">Add Ingredient</button>
 
         <button type="button"
