--- a/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -12,7 +12,7 @@
 				<li><a style='cursor: pointer'
 					(click)="onToShoppingList()">To Shopping List</a></li>
 				<li><a [routerLink]="['edit']">Edit Recipe</a></li>
-				<li><a href='#'>Delete Recipe</a></li>
+				<li><a (click)="onDelete()">Delete Recipe</a></li>
 			</ul>
 		</div>
 	</div>
