--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -78,7 +78,8 @@
 
           <div class="col-xs-1 form-group">
             <button type="button"
-                    class="btn btn-danger">x</button>
+                    class="btn btn-danger"
+              (click)="onDeleteIngredient(i)">x</button>
           </div>
 
         </div>
