--- a/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -2,8 +2,8 @@
 	<div class='col-md-12'>
 		<h3>Recipe Details</h3>
 
-		<div class='btn-group'
-			appDropdown>
+		<div class='btn-group' appDropdown>
+
 			<button type='button' class='btn btn-primary dropdown-toggle'>
 				Manage Recipe <span class='caret'></span>
 			</button>
