--- a/src/app/account/signup/signup.component.html
+++ b/src/app/account/signup/signup.component.html
@@ -1,3 +1,40 @@
-<p>
-  signup works!
-</p>
+<div class="row">
+
+  <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+    <div class="page-header">
+      <h3>Sign up</h3>
+    </div>
+
+    <div class="form-group">
+      <label for="firstname">First</label>
+      <input
+        id="firstname"
+        name="firstname"
+        formcontrolName="firstname"
+        class="form-control"
+        required>
+    </div>
+
+    <div class="form-group">
+      <label for="lastname">Last</label>
+      <input
+        id="lastname"
+        name="lastname"
+        formcontrolName="lastname"
+        class="form-control"
+        required>
+    </div>
+
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input
+        id="email"
+        name="email"
+        formcontrolName="email"
+        class="form-control"
+        email
+        required>
+    </div>
+  </div>
+
+</div>
