--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,6 +11,13 @@
 		</ul>
 
 		<ul class='nav navbar-nav navbar-right'>
+      <li class='dropdown' appDropdown>
+        <a class='dropdown-toggle' role='button'>Account <span class='caret'></span></a>
+        <ul class="dropdown-menu">
+          <li class="dropdown"><a class='menu-btn' (click)="onSignIn()">Sign In</a></li>
+          <li class="dropdown"><a class='menu-btn' (click)="onSignUp()">Sign Up</a></li>
+        </ul>
+      </li>
 			<li class='dropdown' appDropdown>
 				<a class='dropdown-toggle' role='button'>Manage <span class='caret'></span></a>
 				<ul class='dropdown-menu'>
