correcting formControlName input attribute

--- a/src/app/account/signup/signup.component.html
+++ b/src/app/account/signup/signup.component.html
@@ -12,9 +12,8 @@
         <input
           id="firstname"
           name="firstname"
-          formcontrolName="firstname"
-          class="form-control"
-          required>
+          formControlName="firstname"
+          class="form-control">
       </div>
 
       <div class="form-group">
@@ -22,9 +21,8 @@
         <input
           id="lastname"
           name="lastname"
-          formcontrolName="lastname"
-          class="form-control"
-          required>
+          formControlName="lastname"
+          class="form-control">
       </div>
 
       <div class="form-group">
@@ -32,10 +30,8 @@
         <input
           id="email"
           name="email"
-          formcontrolName="email"
-          class="form-control"
-          email
-          required>
+          formControlName="email"
+          class="form-control">
       </div>
 
       <div class="form-group">
@@ -44,8 +40,7 @@
            id="password"
            name="password"
            formControlName="password"
-           class="form-control"
-           required>
+           class="form-control">
       </div>
 
       <div class="form-group">
