--- a/src/app/account/signup/signup.component.html
+++ b/src/app/account/signup/signup.component.html
@@ -44,7 +44,7 @@
       </div>
 
       <div class="form-group">
-        <label for="password">Confirm password</label>
+        <label for="cwpassword">Confirm password</label>
         <input type="cwpassword"
                id="cwpassword"
                name="cwpassword"
