--- a/src/app/account/signin/signin.component.html
+++ b/src/app/account/signin/signin.component.html
@@ -1,25 +1,28 @@
 <div class="row">
-  <form #signin="ngForm" (ngSubmit)="onSubmit()">
+  <form #signinForm="ngForm" (ngSubmit)="onSubmit()">
 
     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
 
       <div class="form-group">
         <label for="email">Email</label>
         <input type="text"
-            id="email"
-            class="form-control">
+          id="email"
+          class="form-control"
+          required>
       </div>
 
       <div class="form-group">
         <label for="password">Password</label>
         <input type="password"
-               id="password"
-               class="form-control">
+          id="password"
+          class="form-control"
+          required>
       </div>
 
       <div class="form-group">
         <button type="submit"
-          class="btn btn-default">Sign in</button>
+          class="btn btn-default"
+          (click)="onSignIn()">Sign in</button>
       </div>
     </div>
 
