--- a/src/app/account/signin/signin.component.html
+++ b/src/app/account/signin/signin.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <form #signinForm="ngForm" (ngSubmit)="onSubmit()">
+  <form #signinForm="ngForm" (ngSubmit)="onSubmit(signinForm)">
 
     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
 
@@ -21,8 +21,7 @@
 
       <div class="form-group">
         <button type="submit"
-          class="btn btn-default"
-          (click)="onSignIn()">Sign in</button>
+          class="btn btn-default">Sign in</button>
       </div>
     </div>
 
