--- a/src/app/account/signin/signin.component.html
+++ b/src/app/account/signin/signin.component.html
@@ -7,7 +7,9 @@
         <label for="email">Email</label>
         <input type="text"
           id="email"
+          name="email"
           class="form-control"
+          ngModel
           required>
       </div>
 
@@ -15,7 +17,9 @@
         <label for="password">Password</label>
         <input type="password"
           id="password"
+          name="password"
           class="form-control"
+          ngModel
           required>
       </div>
 
