--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,8 +14,8 @@
       <li class='dropdown' appDropdown>
         <a class='dropdown-toggle' role='button'>Account <span class='caret'></span></a>
         <ul class="dropdown-menu">
-          <li class="dropdown"><a class='menu-btn' (click)="onSignIn()">Sign In</a></li>
-          <li class="dropdown"><a class='menu-btn' (click)="onSignUp()">Sign Up</a></li>
+          <li class="dropdown"><a class='menu-btn' [routerLink]="['/signin']">Sign In</a></li>
+          <li class="dropdown"><a class='menu-btn' [routerLink]="['/signup']">Sign Up</a></li>
         </ul>
       </li>
 			<li class='dropdown' appDropdown>
