--- a/src/app/account/signup/signup.component.html
+++ b/src/app/account/signup/signup.component.html
@@ -1,30 +1,11 @@
 <div class="row">
 
-  <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+  <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
     <div class="page-header">
       <h3>Sign up</h3>
     </div>
 
     <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
-
-      <div class="form-group">
-        <label for="firstname">First</label>
-        <input
-          id="firstname"
-          name="firstname"
-          formControlName="firstname"
-          class="form-control">
-      </div>
-
-      <div class="form-group">
-        <label for="lastname">Last</label>
-        <input
-          id="lastname"
-          name="lastname"
-          formControlName="lastname"
-          class="form-control">
-      </div>
-
       <div class="form-group">
         <label for="email">Email</label>
         <input
@@ -41,16 +22,6 @@
            name="password"
            formControlName="password"
            class="form-control">
-      </div>
-
-      <div class="form-group">
-        <label for="cwpassword">Confirm password</label>
-        <input type="cwpassword"
-               id="cwpassword"
-               name="cwpassword"
-               formControlName="cwpassword"
-               class="form-control"
-               required>
       </div>
 
       <div class="form-group">
