--- a/src/app/account/signin/signin.component.html
+++ b/src/app/account/signin/signin.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <form #signinForm="ngForm" (ngSubmit)="onSubmit(signinForm)">
 
-    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
+    <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-4">
 
       <div class="form-group">
         <label for="email">Email</label>
