--- a/src/app/account/signup/signup.component.html
+++ b/src/app/account/signup/signup.component.html
@@ -29,7 +29,8 @@
           <button type="submit"
             class="btn btn-primary">Sign up</button>
           <button type="button"
-            class="btn btn-danger">Rest</button>
+            class="btn btn-danger"
+            (click)="onReset()">Reset</button>
         </div>
       </div>
 
