--- a/src/app/account/signup/signup.component.html
+++ b/src/app/account/signup/signup.component.html
@@ -27,6 +27,7 @@
       <div class="form-group">
         <div class="signup-centered">
           <button type="submit"
+            [disabled]="!signupForm.valid"
             class="btn btn-primary">Sign up</button>
           <button type="button"
             class="btn btn-danger"
