--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,20 +11,27 @@
 		</ul>
 
 		<ul class='nav navbar-nav navbar-right'>
-      <li class='dropdown' appDropdown>
-        <a class='dropdown-toggle' role='button'>Account <span class='caret'></span></a>
-        <ul class="dropdown-menu">
-          <li class="dropdown"><a class='menu-btn' [routerLink]="['/signin']">Sign In</a></li>
-          <li class="dropdown"><a class='menu-btn' [routerLink]="['/signup']">Sign Up</a></li>
-        </ul>
-      </li>
-			<li class='dropdown' appDropdown>
-				<a class='dropdown-toggle' role='button'>Manage <span class='caret'></span></a>
-				<ul class='dropdown-menu'>
-					<li><a class='menu-btn'(click)="onSave()">Save Data</a></li>
-					<li><a class="menu-btn" (click)="onFetch()">Fetch Data</a></li>
-				</ul>
-			</li>
+
+      <ng-template [ngIf]="!auth.isAuthenticated()">
+        <li class='dropdown' appDropdown>
+          <a class='dropdown-toggle' role='button'>Account <span class='caret'></span></a>
+          <ul class="dropdown-menu">
+            <li class="dropdown"><a class='menu-btn' [routerLink]="['/signin']">Sign In</a></li>
+            <li class="dropdown"><a class='menu-btn' [routerLink]="['/signup']">Sign Up</a></li>
+          </ul>
+        </li>
+      </ng-template>
+
+      <ng-template [ngIf]="auth.isAuthenticated()">
+        <li class='dropdown' appDropdown>
+          <a class='dropdown-toggle' role='button'>Manage <span class='caret'></span></a>
+          <ul class='dropdown-menu'>
+            <li><a class='menu-btn'(click)="onSave()">Save Data</a></li>
+            <li><a class="menu-btn" (click)="onFetch()">Fetch Data</a></li>
+          </ul>
+        </li>
+      </ng-template>
+
 		</ul>
 	</div>
 </nav>
