adding sign out and redirect functionality

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -32,6 +32,10 @@
         </li>
       </ng-template>
 
+      <ng-template [ngIf]="auth.isAuthenticated()">
+        <li><a class="menu-btn" (click)="onSignOut()">Sign Out</a></li>
+      </ng-template>
+
 		</ul>
 	</div>
 </nav>
