--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
 <div class="row">
-  <h3>Welcome to the Recipe Bookgit </h3>
+  <div class="col-xs-10">
+    <h3>Welcome to the Recipe Book</h3>
+  </div>
 </div>
