moving button to pull-right

--- a/src/app/recipe-book/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-book/recipe-list/recipe-list.component.html
@@ -1,9 +1,9 @@
 <div class='row'>
 	<div class='col-md-12'>
-		<h3>Recipe List</h3>
-
-		<button class='btn btn-success'
-      (click)="onNewRecipe()">New Recipe</button>
+		<h3>Recipe List
+      <button class='btn btn-success pull-right'
+              (click)="onNewRecipe()">New Recipe</button>
+    </h3>
 
 	</div>
 </div>
