--- a/src/app/recipe-book/recipe-item/recipe-item.component.html
+++ b/src/app/recipe-book/recipe-item/recipe-item.component.html
@@ -1,10 +1,12 @@
-<div class='pull-left'>
-	<h4 class='list-group-item-heading'>{{recipe.name}}</h4>
-	<p class='list-group-item-text'>{{recipe.description}}</p>
+<div class="media">
+  <div class="media-left">
+    <img [src]='recipe.imagePath'
+         alt='{{recipe.description}}'
+         class='media-object'
+         style='max-height: 50px' />
+  </div>
+  <div class='media-body'>
+    <h4 class='media-heading'>{{recipe.name}}</h4>
+    <p>{{recipe.description}}</p>
+  </div>
 </div>
-<span class='pull-right'>
-	<img [src]='recipe.imagePath'
-		 alt='{{recipe.description}}' 
-		 class='img-responsive' 
-		 style='max-height: 50px' />
-</span>
