--- a/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -1,20 +1,22 @@
 <div class='row'>
 	<div class='col-md-12'>
-		<h3>Recipe Details</h3>
+		<h3>Recipe Details
 
-		<div class='btn-group' appDropdown>
+      <div class='btn-group pull-right' appDropdown>
 
-			<button type='button' class='btn btn-primary dropdown-toggle'>
-				Manage Recipe <span class='caret'></span>
-			</button>
+        <button type='button' class='btn btn-primary dropdown-toggle'>
+          Manage Recipe <span class='caret'></span>
+        </button>
 
-			<ul class='dropdown-menu'>
-				<li><a style='cursor: pointer'
-					(click)="onToShoppingList()">To Shopping List</a></li>
-				<li><a [routerLink]="['edit']">Edit Recipe</a></li>
-				<li><a class='menu-btn' (click)="onDelete()">Delete Recipe</a></li>
-			</ul>
-		</div>
+        <ul class='dropdown-menu'>
+          <li><a style='cursor: pointer'
+            (click)="onToShoppingList()">To Shopping List</a></li>
+          <li><a [routerLink]="['edit']">Edit Recipe</a></li>
+          <li><a class='menu-btn' (click)="onDelete()">Delete Recipe</a></li>
+        </ul>
+      </div>
+    </h3>
+
 	</div>
 </div>
 
