--- a/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -1,7 +1,6 @@
 <div class='row'>
 	<div class='col-md-12'>
-		<h3>Recipe Details
-
+		<h3>{{recipe.name}}
       <div class='btn-group pull-right' appDropdown>
 
         <button type='button' class='btn btn-primary dropdown-toggle'>
@@ -10,7 +9,7 @@
 
         <ul class='dropdown-menu'>
           <li><a style='cursor: pointer'
-            (click)="onToShoppingList()">To Shopping List</a></li>
+                 (click)="onToShoppingList()">To Shopping List</a></li>
           <li><a [routerLink]="['edit']">Edit Recipe</a></li>
           <li><a class='menu-btn' (click)="onDelete()">Delete Recipe</a></li>
         </ul>
@@ -20,19 +19,19 @@
 	</div>
 </div>
 
+<hr/>
 
-<div class='row'>
-	<div class='col-md-12'>
-		<h2>{{recipe.name}}</h2>
-		<img [src]="recipe.imagePath" alt="{{ recipe.name }}"
-			 class='img-responsive'
-			 style='max-height:300px'/>
-	</div>
+<div class="row">
+  <div class="col-md-12">
+    <img [src]="recipe.imagePath" alt="{{ recipe.name }}"
+         class='img-responsive'
+         style='max-height:300px'/>
+  </div>
 </div>
 
 <div class='row'>
 	<div class='col-md-12'>
-		<p>{{recipe.description}}</p>
+		<p class="description">{{recipe.description}}</p>
 	</div>
 </div>
 
